--- a/src/layout/header/header.module.scss
+++ b/src/layout/header/header.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5px 20px;
+  padding: 5px 20px 0;
 }
 
 .logo {
