Page Error + corrections

--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -1,5 +1,11 @@
 //// Colors
+
 $primary-color: #2c3e50;
+$secondary-color: #00bc77;
+$secondary-color-active: #42b983;
+$tertiary-color: #222;
+
+$logo-color-dark: #244B30;
 
 $bg-light: #FFFFFF;
 $bg-dark: #12002b;
