--- a/src/components/features/features.module.scss
+++ b/src/components/features/features.module.scss
@@ -10,7 +10,7 @@
 
   &_icon {
     width: 100px;
-    border: 10px solid #00bc77;
+    border: 10px solid variables.$secondary-color;
     border-radius: 50%;
     padding: 1rem;
   }
@@ -21,7 +21,7 @@
   }
 
   &_title {
-    color: #222;
+    color: variables.$tertiary-color;
     font-size: 1.25rem;
     font-weight: bold;
     margin-bottom: 0.5rem;
