mise en place d'un apiFetch, des slices et actions pour la page login >> erreur API à débugger //// réorganisation d'une partie de l'architecture de l'app

--- a/src/pages/login/login.module.scss
+++ b/src/pages/login/login.module.scss
@@ -1,1 +1,20 @@
 @use '../../assets/style/variables';
+
+.loginpage {
+  background-color: variables.$bg-dark;
+  padding: .5rem 2rem 10rem;
+}
+.signin {    
+  &_content {
+    box-sizing: border-box;
+    background-color: white;
+    width: 300px;
+    margin: 0 auto;
+    margin-top: 3rem;
+    padding: 2rem;
+  }
+
+  &_icon {
+    font-size: 14px;
+  }
+}
