Correction de l'erreur de requête API : "GET" profile + mise en place de la page profile avec mockup du contenu dynamique (transactions.json)

--- a/src/pages/login/login.module.scss
+++ b/src/pages/login/login.module.scss
@@ -1,6 +1,6 @@
 @use '../../assets/style/variables';
 
-.loginpage {
+.login_page {
   background-color: variables.$bg-dark;
   padding: .5rem 2rem 10rem;
 }
