--- a/src/components/transactions/transactioncard.module.scss
+++ b/src/components/transactions/transactioncard.module.scss
@@ -32,6 +32,10 @@
     padding: 0;
     font-size: 1rem;
     font-weight: normal;
+    
+      @include variables.respond-to('pad') {
+        min-inline-size: 300%;
+      }
   }
 
   &_amount {
